Bugzilla bug #33652: align PRNetAddr on 8-byte boundaries. Modified files: prsocket.c, ptio.c